# rust-linear-algebra

./: Cargo.toml
src/: lib.rs  matrix_functions.rs  vector_functions.rs  vectors.rs
src/matrices/: functions.rs  matrix3x3.rs  mod.rs
src/matrix_functions/: matrix_2x2_functions.rs  matrix_3x3_functions.rs
src/vector_functions/: vector_2d_functions.rs  vector_3d_functions.rs
src/vectors/: functions.rs  mod.rs  vector3d.rs
