[package]
name = "linear_algebra"
version = "1.0.3"
edition = "2021"
description = "A library for basic linear algebra operations in Rust"
license = "MIT"
documentation = "https://docs.rs/linear_algebra"
repository = "https://github.com/brandon-sexton/rust-linear-algebra.git"
homepage = "https://docs.rs/linear_algebra"

[dependencies]
assert_approx_eq = "1.0.0"
